Background Fixes Update
Using W3Schools, I've managed to fix the background image issue, where it would either get cut off, size incorrectly, or move other parts of the website.

Now that this issue is fixed, I can work to finish this page.

To add, I've adjusted the navigation bar to have the correct buttons, all that's left is to add an underline to each button, and link them to other pages.

--- a/Recources/core.css
+++ b/Recources/core.css
@@ -1,5 +1,12 @@
+html { 
+  background: url(Images/download.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 body {
-    background-color: black;
     color: white;
     padding: 0px;
     margin: 0px;
@@ -48,14 +55,27 @@ body {
 
 .navbuttonspace {
   width: 10%;
-  background-color: grey;
+  
   border-bottom: inherit;
 }
 
 .navbutton {
-  width: 16%;
-  background-color: red;
+  width: fit-content;
+  background-color: inherit;
   border-bottom: inherit;
+
+  padding-left: 5px;
+  padding-right: 5px;
+
+  font-size: 2vw;
+}
+
+.selected {
+  background-color: rgb(39, 35, 54);
+}
+
+.navbutton:hover {
+  background-color: #3c3452;
 }
 
 .navtextspace {
@@ -65,16 +85,29 @@ body {
 
 .space {
   top: 5vh;
-  background-color: transparent;
   height: 50vh;
-  width: 100vh;
+  width: 100%;
+
   display: flex;
 }
 
 .bottomText {
   background: rgb(144,144,144);
-  height: 87.32692581629vw;
+  background: linear-gradient(0deg, rgba(144,144,144,1) 0%, rgba(170,170,170,1) 83%, rgba(255,255,255,0) 100%);
+  height:44.84708vh;
 
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+
+  font-size: 1.3vw;
+
+  word-break:break-all;
+}
+
+.linebreak {
+  height: 90px;
+  width: 100%;
   display: flex;
 }
 
